# cxx-qt

./: .clang-format  .clangd  .gitignore  .gitmodules  .markdownlint.jsonc  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CMakePresets.json.license  CODE_OF_CONDUCT.md  CODE_OF_CONDUCT.md.license  Cargo.lock.license  Cargo.toml  README.md  build.rs  check_cargo_build_rerun.sh  clang_format_check.sh  clippy.toml  codecov.yml  valgrind_suppressions.txt  valgrind_suppressions.txt.license  vcpkg.json  vcpkg.json.license
clang-format/: Cargo.toml  README.md
clang-format/src/: lib.rs
crates/cxx-qt/: Cargo.toml  build.rs
crates/cxx-qt-build/: Cargo.toml
crates/cxx-qt-build/cpp/: builtins.h
crates/cxx-qt-build/src/: cfg_evaluator.rs  cpp_file.rs  dependencies.rs  diagnostics.rs  dir.rs  init.rs  interface.rs  lib.rs  manifest.rs  opts.rs  out.rs  qml_modules.rs  std_types_qt5.cpp  utils.rs
crates/cxx-qt-gen/: Cargo.toml  bat  update_expected.sh
crates/cxx-qt-gen/include/: cxxqt_locking.h  cxxqt_maybelockguard.h  cxxqt_signalhandler.h  cxxqt_thread.h  cxxqt_type.h
crates/cxx-qt-gen/src/: extract.rs  gen_cpp.rs  gen_rs.rs  lib.rs
crates/cxx-qt-gen/test_inputs/: cfgs.rs  cfgs.rs.license  inheritance.rs  inheritance.rs.license  invokables.rs  passthrough_and_naming.rs  properties.rs  qenum.rs  shebang.rs  shebang.rs.license  signals.rs  types_primitive_property.rs  types_qt_invokable.rs  types_qt_property.rs
crates/cxx-qt-gen/test_outputs/: cfgs.cpp  cfgs.h  cfgs.rs  custom_default.rs  inheritance.cpp  inheritance.h  inheritance.rs  invokables.cpp  invokables.h  invokables.rs  naming.cpp  (+23 more)
crates/cxx-qt-lib/: .gitattributes  Cargo.toml  build.rs
crates/cxx-qt-lib-extras/: Cargo.toml  build.rs
crates/cxx-qt-lib-extras-headers/: Cargo.toml
crates/cxx-qt-lib-headers/: Cargo.toml
crates/cxx-qt-macro/: Cargo.toml
crates/qt-build-utils/: Cargo.toml
cxx-qt/: Cargo.toml  README.md
cxx-qt-build/: Cargo.toml
cxx-qt-build/src/: lib.rs
cxx-qt-cli/: Cargo.toml
cxx-qt-cli/src/: main.rs
cxx-qt-gen/: Cargo.toml
cxx-qt-gen/src/: cxx_qt.cpp  cxx_qt.h  extract.rs  gen_cpp.rs  gen_qqmlextensionplugin.rs  gen_rs.rs  lib.rs  update_requester.cpp  utils.rs
cxx-qt-gen/test_inputs/: basic_change_handler.rs  basic_custom_default.rs  basic_ident_changes.rs  basic_invokable_and_properties.rs  basic_mod_attrs_vis.rs  basic_mod_passthrough.rs  basic_mod_use.rs  basic_only_invokable.rs  basic_only_invokable_return.rs  basic_only_properties.rs  basic_pin_invokable.rs  basic_unknown_rust_obj_type.rs  basic_update_requester.rs  custom_default.rs  handlers.rs  invokables.rs  naming.rs  passthrough.rs  properties.rs  signals.rs  signals.rs.license  subobject_pin_invokable.rs  subobject_property.rs  types_primitive_property.rs  types_qt_invokable.rs  types_qt_property.rs
cxx-qt-gen/test_outputs/: basic_change_handler.cpp  basic_change_handler.h  basic_change_handler.rs  basic_custom_default.rs  basic_ident_changes.cpp  basic_ident_changes.h  basic_ident_changes.rs  basic_invokable_and_properties.cpp  basic_invokable_and_properties.h  basic_invokable_and_properties.rs  basic_mod_attrs_vis.rs  basic_mod_passthrough.rs  basic_mod_use.rs  basic_only_invokable.cpp  basic_only_invokable.h  basic_only_invokable.rs  basic_only_invokable.rs.license  basic_only_invokable_return.cpp  basic_only_invokable_return.h  basic_only_invokable_return.rs  basic_only_properties.cpp  basic_only_properties.h  basic_only_properties.rs  basic_pin_invokable.cpp  basic_pin_invokable.h  basic_pin_invokable.rs  basic_qqmlextensionplugin.cpp  basic_unknown_rust_obj_type.cpp  basic_unknown_rust_obj_type.h  basic_unknown_rust_obj_type.rs  basic_update_requester.cpp  basic_update_requester.h  basic_update_requester.rs  custom_default.rs  handlers.cpp  handlers.h  handlers.rs  invokables.cpp  invokables.h  invokables.rs  (+27 more)
cxx-qt-lib/: CMakeLists.txt  Cargo.toml  CxxQt.cmake  build.rs
cxx-qt-lib/include/: qt_types.h  update_requester.h
cxx-qt-lib/packaging/: CxxQtConfig.cmake.in  cxx-qt.pc.in  cxx-qt.pc.in.license
cxx-qt-lib/src/: lib.rs  map_qt_value.rs  qcolor.rs  qdate.rs  qdatetime.rs  qpoint.rs  qpointf.rs  qrect.rs  qrectf.rs  qsize.rs  qsizef.rs  qstring.rs  qt_types.cpp  qtime.rs  qurl.rs  qvariant.rs  update_requester.cpp  update_requester.rs
cxx-qt/src/: lib.rs
cxx-qt/test_outputs/: basic_only_invokable.h
examples/: CMakeLists.txt  README.md
examples/basic/: CMakeLists.txt  Cargo.toml  build.rs
examples/basic_cxx_only/: CMakeLists.txt  Cargo.toml
examples/basic_cxx_qt/: CMakeLists.txt  Cargo.toml  build.rs
examples/basic_cxx_qt_qml/: CMakeLists.txt  Cargo.toml  build.rs
examples/basic_cxx_qt_qml_plugin/: CMakeLists.txt  Cargo.toml  build.rs
examples/cargo_without_cmake/: CMakeLists.txt  Cargo.toml  build.rs  qml
examples/demo_threading/: CMakeLists.txt  Cargo.toml  bad_client.py  build.rs  client.py  demo.py
examples/meta_project/: CMakeLists.txt
examples/minimal_cxx_qt_qml/: CMakeLists.txt  Cargo.toml
examples/qml_basics/: Cargo.toml  build.rs
examples/qml_extension_plugin/: CMakeLists.txt  Cargo.toml  build.rs
examples/qml_features/: .qmlls.ini  CMakeLists.txt  Cargo.toml  build.rs
examples/qml_minimal/: CMakeLists.txt  Cargo.toml  build.rs
examples/qml_minimal_plugin/: CMakeLists.txt  tests
examples/qml_multi_crates/: CMakeLists.txt
examples/qml_with_threaded_logic/: CMakeLists.txt  Cargo.toml  build.rs
examples/qstring_standalone/: CMakeLists.txt  Cargo.toml  build.rs
examples/qt_types_standalone/: CMakeLists.txt  Cargo.toml
examples/span-inspector/: Cargo.toml  build.rs
examples/todo_app/: Cargo.toml  build.rs
examples/update_requester_standalone/: CMakeLists.txt  Cargo.toml
examples/widgets_minimal/: Cargo.toml  build.rs
qt-build/: Cargo.toml
qt-build/src/: lib.rs
tests/: CMakeLists.txt
tests/basic_cxx_only/: CMakeLists.txt  Cargo.toml  build.rs
tests/basic_cxx_qt/: CMakeLists.txt  Cargo.toml  build.rs
tests/qt_types_standalone/: CMakeLists.txt  Cargo.toml  build.rs
tests/update_requester_standalone/: CMakeLists.txt  Cargo.toml
(+1571 files in other folders)
