# SPDX-FileCopyrightText: 2021 Klarälvdalens Datakonsult AB, a KDAB Group company <info@kdab.com>
# SPDX-FileContributor: Andrew Hayzen <andrew.hayzen@kdab.com>
# SPDX-FileContributor: Gerhard de Clercq <gerhard.declercq@kdab.com>
#
# SPDX-License-Identifier: MIT OR Apache-2.0
[package]
name = "clang-format"
version = "0.1.0"
authors = ["Andrew Hayzen <andrew.hayzen@kdab.com>", "Gerhard de Clercq <gerhard.declercq@kdab.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "A basic clang-format Rust wrapper"
repository = "https://github.com/KDAB/cxx-qt/"
readme = "README.md"

[dependencies]
once_cell = "1.7"
