# SPDX-FileCopyrightText: 2021 Klarälvdalens Datakonsult AB, a KDAB Group company <info@kdab.com>
# SPDX-FileContributor: Andrew Hayzen <andrew.hayzen@kdab.com>
# SPDX-FileContributor: Gerhard de Clercq <gerhard.declercq@kdab.com>
#
# SPDX-License-Identifier: MIT OR Apache-2.0
[package]
name = "cxx-qt-build"
version = "0.3.0"
authors = ["Andrew Hayzen <andrew.hayzen@kdab.com>", "Gerhard de Clercq <gerhard.declercq@kdab.com>", "Leon Matthes <leon.matthes@kdab.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Helpers for integrating `cxx-qt` crate into a Cargo build"
repository = "https://github.com/KDAB/cxx-qt/"

[dependencies]
clang-format = "0.1"
cxx-gen = "0.7"
cxx-qt-lib = { path = "../cxx-qt-lib", version = "0.3" }
cxx-qt-gen = { path = "../cxx-qt-gen", version = "0.3" }
proc-macro2 = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
quote = "1.0"
