[package]
name = "cxx-qt-gen"
version = "0.1.0"
authors = ["Andrew Hayzen <andrew.hayzen@kdab.com>", "Gerhard de Clercq <gerhard.declercq@kdab.com>"]
edition = "2018"

[dependencies]
clang-format = { path = "../clang-format" }
convert_case = "0.4"
derivative = "2.2"
indoc = "1.0"
proc-macro2 = "1.0"
syn = { version = "1.0", features = ["extra-traits", "full"] }
quote = "1.0"

[dev-dependencies]
pretty_assertions = "0.7"
