# SPDX-FileCopyrightText: 2021 Klarälvdalens Datakonsult AB, a KDAB Group company <info@kdab.com>
# SPDX-FileContributor: Andrew Hayzen <andrew.hayzen@kdab.com>
# SPDX-FileContributor: Gerhard de Clercq <gerhard.declercq@kdab.com>
#
# SPDX-License-Identifier: MIT OR Apache-2.0
[package]
name = "cxx-qt-gen"
version = "0.3.0"
authors = ["Andrew Hayzen <andrew.hayzen@kdab.com>", "Gerhard de Clercq <gerhard.declercq@kdab.com>", "Leon Matthes <leon.matthes@kdab.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Code generation for integrating `cxx-qt` into higher level tools"
repository = "https://github.com/KDAB/cxx-qt/"

[dependencies]
clang-format = "0.1"
convert_case = "0.4"
derivative = "2.2"
indoc = "1.0"
proc-macro2 = "1.0"
syn = { version = "1.0", features = ["extra-traits", "full"] }
quote = "1.0"

[dev-dependencies]
ctor = "0.1"
pretty_assertions = "0.7"
