# SPDX-FileCopyrightText: 2021 Klarälvdalens Datakonsult AB, a KDAB Group company <info@kdab.com>
# SPDX-FileContributor: Andrew Hayzen <andrew.hayzen@kdab.com>
# SPDX-FileContributor: Gerhard de Clercq <gerhard.declercq@kdab.com>
#
# SPDX-License-Identifier: MIT OR Apache-2.0
[package]
name = "cxx-qt-lib"
version = "0.3.0"
authors = ["Andrew Hayzen <andrew.hayzen@kdab.com>", "Gerhard de Clercq <gerhard.declercq@kdab.com>", "Leon Matthes <leon.matthes@kdab.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Qt types for integrating `cxx-qt` crate with `cxx`"
repository = "https://github.com/KDAB/cxx-qt/"
# Fake linking so that we expose cargo data as env vars for downstream crates
# https://github.com/rust-lang/cargo/issues/3544
links = "cxx-qt-lib"

[dependencies]
cxx = "1.0.75"

[build-dependencies]
cxx-build = { version = "1.0", features = [ "parallel" ] }
cxx-qt-lib-headers = { path = "../cxx-qt-lib-headers", version = "0.3" }
qt-build = { path = "../qt-build" }
