[package]
name = "cxx-qt"
version = "0.1.0"
authors = ["Andrew Hayzen <andrew.hayzen@kdab.com>", "Gerhard de Clercq <gerhard.declercq@kdab.com>"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
cxx-qt-gen = { path = "../cxx-qt-gen" }
proc-macro2 = "1.0"
syn = { version = "1.0", features = ["extra-traits", "full"] }
